--- a/1st/03-동작원리 출력해보기.html
+++ b/1st/03-동작원리 출력해보기.html
@@ -8,10 +8,20 @@
 <body>
     
     <script>
+        /*
+            자바스크립트 코드는 기본적으로 작성된 순서에 맞춰 차례대로 작업을 수행
 
+            명령문은 한 줄에 하나씩 쓰는 것이 좋음
+            그러나 명령문 끝에 세미 콜론을 붙이면 한 줄에 두 개 이상의 명령문 작성 가능
+            세미콜론의 의미는 '명령문 하나 끝남'이라는 의미'
+        
+        */
         // 객체 뒤에 붙는 명령문, 메소드!
         window.alert('당신...자꾸 그러면 경고야!')
         window.alert('경고라 했지!!!')
+
+        // 자바스크립트의 동작 원리는 입력 - 처리 - 출력
+        // 코드 작성으로 입력 후 자바스크립트가 처리하여 웹브라우저에 출럭
 
     </script>
 
