--- a/1st/09-DOM소개.html
+++ b/1st/09-DOM소개.html
@@ -3,9 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dom소개</title>
 </head>
 <body>
     
+    <p>너무너무 졸리다</p>
+    <p class="comment">오늘 하루 시간이 빨리 갔으면 좋겠다.</p>
+    <p class="comment" id="sleep">그래야 잘 수 있으니까.</p>
+
+
+
+
+    <script>
+
+    const p1 = document.querySelector("p")
+    const p2 = document.querySelector(".comment")
+    const p3 = document.querySelector("#sleep")
+
+   
+   
+    console.log(p1.textContent)
+    console.log(p2.textContent)
+    console.log(p3.textContent)
+
+
+    p1.textContent = "미친듯이 졸리다."
+    p2.textContent = "미친듯이 졸리다."
+    p3.textContent = "미친듯이 졸리다."
+
+
+/*
+웹브라우저가 html 문서를 해석하고 화면을 통해 
+해석된 결과를 보여주는 과정을 '렌더링'이라고 한다.
+
+DOM(Document Object Model) : html 문서를 tree 구조로 표현한 문서
+브라우저는 dom을 통해 화면에 웹 콘텐츠들을 렌더링한다.
+
+dom은 웹 콘텐츠를 추가, 수정, 삭제 그리고 
+마우스 클릭, 키보드 타이핑 등 이벤트에 대한 처리를 
+정의할 수 있도록 제공되는 프로그래밍 인터페이스이다.
+
+window.document는 현재 브라우저에 렌더링되고 있는 문서를 의미.
+window.document는 페이지 콘첸트, 즉 dom에 대한 진입점 역할을 하는 프로그래밍 인터페이스이다.
+
+*/
+
+
+
+
+
+    </script>
+
 </body>
 </html>
